--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: objective-c
-osx_image: xcode8.2     
+osx_image: xcode8.2
 before_install:
 - gem install xcpretty
-- gem install cocoapods
 script:
 - set -o pipefail
 
 
-- xcodebuild -project AMCropView.xcworkspace -scheme "AMCropView" test -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6s" ONLY_ACTIVE_ARCH=NO | xcpretty -c
+- xcodebuild -project AMCropView.xcodeproj -scheme "AMCropView" test -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6s" ONLY_ACTIVE_ARCH=NO | xcpretty -c
